--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,10 +1,25 @@
 {
-    "name": "",
-    "description": "Screen Time Manager",
+    "name": "Screen Time Manager",
+    "description": "Tracks the time spent on different websites and provides analytics.",
     "version": "1.0",
     "manifest_version": 3,
+    "permissions": [
+        "tabs",
+        "storage",
+        "activeTab",
+        "alarms",
+        "notifications"
+    ],
+    "background": {
+        "service_worker": "background.js"
+    },
     "action": {
       "default_popup": "popup/popup.html",
-      "default_icon": "image/logo.png"
-    }
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    },
+    "host_permissions": [
+        "<all_urls>"
+    ]
   }
