--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,14 @@
   "main": "backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend",
-    "dev": "nodemon backend",
-    "database": "nodemon --exec 'node --loader ts-node/esm' ./database/script.ts"
+    "start": "node backend"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@nestjs/cli": "^11.0.2",
     "@prisma/client": "^6.3.1",
     "@types/node": "^22.13.1",
     "cors": "^2.8.5",
