--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "backend.js",
   "scripts": {
+    "build":"nest build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend"
+    "start": "nest start"
   },
   "keywords": [],
   "author": "",
@@ -12,13 +12,17 @@
   "description": "",
   "dependencies": {
     "@nestjs/cli": "^11.0.2",
+    "@nestjs/testing": "^11.0.8",
     "@prisma/client": "^6.3.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "nestjs": "^0.0.1",
     "pg": "^8.13.1",
     "prisma": "^6.3.1",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
