--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,8 +7,30 @@
         "outDir": "./dist",
         "strict": true,
         "lib": ["esnext"],
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
+    // "compilerOptions": {
+    //     "module": "commonjs",
+    //     "declaration": true,
+    //     "removeComments": true,
+    //     "emitDecoratorMetadata": true,
+    //     "experimentalDecorators": true,
+    //     "allowSyntheticDefaultImports": true,
+    //     "target": "ES2021",
+    //     "sourceMap": true,
+    //     "outDir": "./dist",
+    //     "baseUrl": "./",
+    //     "incremental": true,
+    //     "skipLibCheck": true,
+    //     "strictNullChecks": true,
+    //     "forceConsistentCasingInFileNames": true,
+    //     "noImplicitAny": true,
+    //     "strictBindCallApply": true,
+    //     "noFallthroughCasesInSwitch": true
+    // },
     "include": ["./**/*.ts"],
     "exclude": []
 }
